--- a/7-ops/其他-2.nexus搭建npm私库.md
+++ b/7-ops/其他-2.nexus搭建npm私库.md
@@ -67,7 +67,9 @@ $ docker pull sonatype/nexus
 $ docker run -d -p 8081:8081 --name nexus sonatype/nexus
 ```
 
-访问 [http://localhost:8081/nexus](http://localhost:8081/nexus) 即可进入，默认账户密码：admin/admin123
+访问 `http://localhost:8081/nexus` 即可进入
+
+- 默认账户密码：admin/admin123
 
 
 
