--- a/7-ops/其他-3.YApi接口平台搭建.md
+++ b/7-ops/其他-3.YApi接口平台搭建.md
@@ -262,7 +262,7 @@ port=27017 # 端口号 默认为27017
 mongod --config "D:\MongoDB\mongodb.config" --install --serviceName "MongoDB"
 ```
 
-打开浏览器访问 [http://localhost:27017/](http://localhost:27017/) 或者 [http://127.0.0.1:27017/](http://127.0.0.1:27017/)
+打开浏览器访问 `http://127.0.0.1:27017/`
 
 显示如下信息：说明启动成功
 
