feat: 完善https http2

--- a/7-ops/云服务器-7.自动化脚本和域名绑定.md
+++ b/7-ops/云服务器-7.自动化脚本和域名绑定.md
@@ -94,7 +94,9 @@ nohup java -jar $BASE/$FILE >/dev/null 2>&1 &
 echo 'java server starting...'
 ```
 
-## 绑定域名
+## 域名
+
+### 绑定域名
 
 首先需要购买域名，并进行域名备案
 
@@ -105,3 +107,58 @@ echo 'java server starting...'
 之后勾选 `@`主机记录和 `www`主机记录，输入对应网站 IP 即可。等待几分钟即可绑定成功
 
 ![image-20231124103717742](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231124103717742.png)
+
+### HTTPS
+
+进入 SSL 证书页面，首先领取当年年费 20 张证书的额度（领取过的无需重复领取）
+
+![image-20231206093521173](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231206093521173.png)
+
+申请证书
+
+![image-20231206093622530](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231206093622530.png)
+
+等待审核，几分钟就能申请下来
+
+![image-20231206093924109](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231206093924109.png)
+
+下载 Nginx 证书
+
+![image-20231206094126488](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231206094126488.png)
+
+云服务器ECS里给 HTTPS 443 端口添加到安全组
+
+![image-20231206094623088](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20231206094623088.png)
+
+```nginx
+server {
+  listen 443 ssl http2;
+  # 修改为你的网站
+  server_name xxx;
+
+  # 修改为你的证书存放目录
+  ssl_certificate /home/cert/xx.pem;
+  ssl_certificate_key /home/cert/xx.key;
+
+  ssl_session_cache shared:SSL:1m;
+  ssl_session_timeout 5m;
+
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers TLS_AES_128_GCM_SHA256:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_256_GCM_SHA384:TLS_AES_128_CCM_SHA256:TLS_AES_128_CCM_8_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+  ssl_prefer_server_ciphers on;
+
+  location / {
+    # 代理到指定端口
+    proxy_pass http://127.0.0.1:9093;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    # 展示地址
+    root /home/doc/cloud-doc;
+    try_files $uri $uri/ /index.html;
+    index index.html;
+  }
+}
+```
+
