--- a/3-base/24-链表结构.md
+++ b/3-base/24-链表结构.md
@@ -65,7 +65,7 @@ class LinkedList<T> {
 }
 ```
 
-### 链表操作
+### 链表完整代码
 
 - append(element)：向链表尾部添加一个新的项
 - insert(position，element)：向链表的特定位置插入一个新的项
@@ -107,9 +107,9 @@ class LinkedList<T> {
   }
 
   append(value: T) {
-    // 1.根据value创建一个新及诶单
+    // 1.根据value创建一个新节点
     const newNode = new Node(value)
-    // 2.判断this.heade是否为null
+    // 2.判断this.head是否为null
     if (!this.head) {
       this.head = newNode
     } else {
@@ -160,6 +160,7 @@ class LinkedList<T> {
       this.head = current?.next ?? null
     } else {
       const previous = this.getNode(position - 1)
+      current = previous!.next
       previous!.next = previous?.next?.next ?? null
     }
     this.size--
