feat: nginx gzip

--- a/7-ops/其他-4.前端必备nginx.md
+++ b/7-ops/其他-4.前端必备nginx.md
@@ -366,6 +366,27 @@ http{
 }
 ```
 
+**Gzip压缩原理**
+
+gzip 的核心是 Deflate，在 [RFC 1951](https://link.zhihu.com/?target=https%3A//tools.ietf.org/html/rfc1951) 中被标准化。Defalte 是一个同时使用 LZ77 与 Huffman Coding 的算法
+
+- LZ77
+
+  LZ77 的核心思路是如果一个串中有两个重复的串，**那么只需要知道第一个串的内容和后面串相对于第一个串起始位置的距离 + 串的长度**
+
+- Huffman Coding
+
+  核心思路是通过构造 Huffman Tree 方式给字符重新编码，以保证出现频率最高的字符占用的字节越少
+
+浏览器在请求资源的时候在 header 里面带上 `accept-encoding: gzip` 的参数。Nginx 在接收 Header 之后，发现如果有这个配置，则发送 gzip 之后的文件，如果没有则发送源文件。浏览器根据 response header 来处理要不要针对返回的文件进行解压缩然后展示
+
+**Brotli**
+
+brotli 比 gzip 更高效，它通过变种 LZ77 算法、Huffman 编码以及二阶文本建模等方式进行数据压缩，帮我们更高效的压缩网页中的各类文件大小，提高加载速度
+
+- brotli 只在 https 下生效，因为 http 请求 request header 里的 Accept-Encoding 是没有 br 的，只有 gzip、deflate
+- 并且 brotli 和 gzip 是可以共存的，无需关闭 gzip，客户端可以根据其能力选择最合适的压缩算法
+
 ### fastcgi
 
 > [Nginx学习：FastCGI模块（一）基础配置](https://www.zyblog.com.cn/article/937)
